# morfo-test

./: .gitignore  Dockerfile  README.md  main.py  open_questions.ipynb  pyproject.toml  visualization.ipynb
.github/workflows/: lint-and-test.yml
src/: image_utils.py  stats_utils.py
tests/: test_image_utils.py
